added to the description of each project

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Psychic Game</h5>
                             <a href="https://github.com/Ryby1024/Psychic-Game" target="blank" data-toggle="popover" title="Psychic Game"
-                            data-content="The Psychic Game helps you to practice basic Javascript and learn assigning variables, for and if statements, as well as using functions."
+                            data-content="The Psychic Game helps you to practice basic Javascript and learn assigning variables, for and if statements, as well as using functions. It uses HTML5, CSS3, and Javascript."
                                 class="btn btn-primary">Click For More</a>
                             <a href="https://ryby1024.github.io/Psychic-Game/" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -194,7 +194,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Liri Bot</h5>
                             <a href="https://github.com/Ryby1024/liri-node-app" target="blank" data-toggle="popover" title="Liri Bot"
-                            data-content="Liri is a command line node app that takes in user parameters and sends back the appropriate data. LIRI is similar to SIRI, except that it is Language Interpetation and Recognition Interface where as SIRI is a Speech Interpetation and Recognition Interface."
+                            data-content="Liri is a command line node app that takes in user parameters and sends back the appropriate data. LIRI is similar to SIRI, except that it is Language Interpetation and Recognition Interface where as SIRI is a Speech Interpetation and Recognition Interface. This application uses Javascript, Axios, Node.js, and JQuery."
                                 class="btn btn-primary">Click For
                                 More</a>
                         </div>
@@ -206,7 +206,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Bamazon</h5>
                             <a href="https://github.com/Ryby1024/node-mysql" target="blank" data-toggle="popover" title="Bamazon"
-                            data-content="This app allows users to preview items for sale or purchase an item from the list of available items that are stored in a mysql database we created. There is also a manager function that allows you to keep tabs on the 'business'."
+                            data-content="This app allows users to preview items for sale or purchase an item from the list of available items that are stored in a mysql database we created. There is also a manager function that allows you to keep tabs on the 'business'. This application uses Javascript, Node.js, JQuery and MySql."
                                 class="btn btn-primary">Click For More</a>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Friend Finder</h5>
                             <a href="https://github.com/Ryby1024/Friend-Finder" target="blank" data-toggle="popover" title="Friend Finder"
-                            data-content="o use this app, a user must answer 10 survey questions. The answers range from 1 (Strongly Disagree) and go to 5 (Strongly Agree). Based on the responses the user gives, the app will match them with someone that most closely fits with the answers they gave."
+                            data-content="o use this app, a user must answer 10 survey questions. The answers range from 1 (Strongly Disagree) and go to 5 (Strongly Agree). Based on the responses the user gives, the app will match them with someone that most closely fits with the answers they gave. This application uses HTML5, CSS3, Javascript, JQuery, Bootstrap4, and Express.js."
                                 class="btn btn-primary">Click For More</a>
                             <a href="https://arcane-journey-78495.herokuapp.com/" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -236,7 +236,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Burger Order</h5>
                             <a href="https://github.com/Ryby1024/burger" target="blank" data-toggle="popover" title="Burger Order"
-                            data-content="The Burger Order app allows you to order whatever burger you choose and then gives you the ability to devour the burger. After you devour the burger you can then delete that burger from the database."
+                            data-content="The Burger Order app allows you to order whatever burger you choose and then gives you the ability to devour the burger. After you devour the burger you can then delete that burger from the database. This application uses HTML5, CSS3, Javascript, Bootstrap4, MySql, Express.js, Handlebars.js, JQuery, and Node.js."
                              class="btn btn-primary">Click For
                                 More</a>
                             <a href="https://sleepy-spire-88994.herokuapp.com/" target="blank"
@@ -252,7 +252,7 @@
                         <div class="card-body">
                             <h5 class="card-title">UnWrapped</h5>
                             <a href="https://github.com/sengland88/unWrapped" target="blank" data-toggle="popover" title="unWrapped"
-                            data-content="A party planning web application that allows users to create and rsvp to parties while also keeping track of guests, gifts and if they sent a thank you note."
+                            data-content="A party planning web application that allows users to create and rsvp to parties while also keeping track of guests, gifts and if they sent a thank you note. This application uses HTML5, CSS3, Javascript, Bootstrap4, JQuery, MySql, Sequalize, Express.js, Node.js, Express-handlebars and Randomatic."
                                 class="btn btn-primary">Click For More</a>
                             <a href="https://dashboard.heroku.com/apps/unwrappedgifts" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -300,7 +300,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Cash Money</h5>
                             <a href="https://github.com/Ryby1024/budget-app" target="blank" data-toggle="popover" title="Cash Money Budget App"
-                            data-content="Full-stack application where users can create a budget, track spending, and plan for upcoming bills. To start, the user will only be allowed access to the Register or Login pages. Upon registering as a new user or logging in as an existing user, they will be able to access all of the application's pages. They will also have a personalized greeting with their first name printed to the navbar for all subsequent pages.""
+                            data-content="Full-stack application where users can create a budget, track spending, and plan for upcoming bills. To start, the user will only be allowed access to the Register or Login pages. Upon registering as a new user or logging in as an existing user, they will be able to access all of the application's pages. They will also have a personalized greeting with their first name printed to the navbar for all subsequent pages. This application uses HTML5, CSS3, Javascript, Bootstrap4, React.js, MongoDB, Mongoose, Express.js, Node.js, Axios, React Chartjs2, and FullCalendar."
                             class="btn btn-primary" >Click For More</a>
                             <a href="https://stormy-beyond-27196.herokuapp.com/" target="blank" class="btn btn-primary">Try Me</a>
                         </div>
